--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-gap: 10px;
+    justify-items: center;
+}
+#navbar a{
+    font-size: 20px;
+}
+.meal{
+    background: rgb(250, 249, 249);
 }
 .meal img{
     display: block;
@@ -17,7 +24,8 @@
     justify-content: center;
 }
 .aboutMeal img{
-    width: 400px;
+    width: 300px;
+    height: 250px;
 }
 #error{
    text-align: center;
